# kiwi

./: CMakeLists.txt  README.md  README.rst  releasenotes.rst  setup.py
.github/workflows/: ci.yml  release.yml  validateTag.yml
kiwi/: version.h.in
